--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body{
-	background: url("assets/images/homebg.jpg") 0px 79px;
-	background-size: 100%;
-    background-repeat: no-repeat;
    	margin: 0;
+	background: url("assets/images/homebg.jpg") 0px 0px no-repeat;
+	background-size: 100%;
 }
 header{
 	width: 100%;
@@ -11,9 +10,9 @@ header{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-}
-.nav__header div{
-	padding-top: 15px;
+	background-position: absolute;
+	background: #fff;
+	height: 80px;
 }
 .img__header{
 	padding-left: 180px;
@@ -23,6 +22,7 @@ header{
 }
 .item{ 
     padding: 14px 14px;
+    font-family: 'robotoregular';
 	text-decoration: none;
     color: #000;
 }
@@ -40,3 +40,129 @@ header{
 	color: #82CA9C;
 	background: #fff; 
 }	
+.botão__header:hover{
+	color: #000;
+}
+.section__container{
+	padding-top: 14%;
+	width: 80%;
+	text-align: center;
+	padding-left: 7.5%;
+}
+.title__container{
+	font-size: 46px;
+	font-family: 'robotoregular';
+	color: #fff;	
+}
+.p__container{
+	font-size: 17px;
+	font-family: 'robotoregular';
+	color: #fff;
+}
+.form__container{
+	margin-top: 8vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.input__text{
+	width: 363px;
+	height: 82px;	
+	/*margin: 20px 0;*/
+    /*padding: 12px 24px;*/
+    border: 2px solid #DDDDDD;
+    color:#fff;	
+}
+.input__submit{
+	width: 202px;
+	height: 88px;	
+	/*margin: 20px 0;*/
+    /*padding: 12px 24px;*/
+    font-size: 20px;
+    background: #82CA9C;
+    border: 2px solid #82CA9C;
+    color: #FFF;
+}
+main{
+	width: 100%;
+	padding-top: 38vh;
+}
+.principal__section{
+	padding-top: 80px;
+	display: flex;
+	flex-direction: row;
+}
+.div-image__principal{
+	padding-left: 142.82px;
+}
+.div__principal{
+	padding-top: 60px;	 
+	padding-left: 70px;
+}
+.title__principal{
+	font-family: 'robotoregular';
+	font-size: 50px;
+}
+.paragrafo__principal{
+	font-family: 'robotoregular';
+	width: 537px;
+	font-size: 20px;
+}
+.input__principal{
+	width: 185.2px;
+	height: 75.18px;
+    font-size: 20px;
+    background: #82CA9C;
+    border: 2px solid #82CA9C;
+    color: #FFF;
+}
+.principal__segunda-section{
+	display: flex;
+	flex-direction: row;
+	padding-top: 90px;	
+}
+.segunda-div__principal{
+	padding-left: 150px;
+}
+.div-image__segunda{
+	padding-left: 80px;
+}
+/*AAAAAAAAAAAAAAAAAAAAAAAAAAaaaaaaa*/
+.container__services{
+	display: flex;
+	flex-wrap: wrap;
+}
+.title__services{
+	font-family: 'robotoregular';
+	text-align: center;
+	font-size: 50px;
+}
+.div__inicio-services{
+	width: 100%;	
+}
+.paragrafo__services{
+	width: 813px;
+	font-family: 'robotoregular';
+	/*text-align: center;*/
+	font-size: 20px;
+}
+.div__image-services{
+	/*width: 40%;*/
+}
+.image__services{
+	/*width: 85.45px;*/
+	height: 57.68px;
+}
+.subtitle__services{
+	width: 50%;
+	font-family: 'robotoregular';
+	font-size: 30px;
+}
+.sub-paragrafo__services{
+	max-width: 323px;
+	font-family: 'robotoregular';
+	font-size: 20px;
+}
+
+
+
